--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "gsap": "^3.12.4",
     "handlebars": "^4.7.8",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
